[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-mcp-application"
version = "0.1.0"
description = "A comprehensive craft tool for Language Learning Models (LLMs) built using the FastMCP library"
authors = [
    {name = "vtanathip"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.12.4",
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.76",
    "langchain-ollama>=0.3.8",
    "mcp-use>=1.3.11",
    "ollama>=0.6.0",
    "pydantic>=2.11.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
]

[project.urls]
Homepage = "https://github.com/vtanathip/simple-mcp-application"
Repository = "https://github.com/vtanathip/simple-mcp-application"
Issues = "https://github.com/vtanathip/simple-mcp-application/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.2",
]
